# Backend

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_google_id.py  0003_add_cargo_image_url.py  0004_add_chat.py  0005_add_driver_ratings.py  0006_add_rating_driver_response.py
app/: main.py
app/core/: config.py  dependencies.py  exceptions.py  logging.py  redis.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  chat.py  driver.py  order.py  rating.py  user.py
app/repositories/: base.py  chat.py  driver.py  order.py  rating.py  user.py
app/routers/: ai_price.py  auth.py  chat.py  drivers.py  orders.py  uploads.py  users.py  ws.py
app/schemas/: ai_price.py  auth.py  chat.py  common.py  driver.py  order.py  rating.py  upload.py  user.py
app/services/: ai_price.py  auth.py  chat.py  chat_ws.py  driver.py  google_auth.py  order.py  rating.py  upload.py  user.py  ws_manager.py
app/utils/: s3.py
tests/: conftest.py  test_ai_price.py  test_auth.py  test_auth_google.py  test_chat.py  test_drivers.py  test_health_and_misc.py  test_orders.py  test_ratings.py  test_uploads.py  test_users.py  test_websocket.py
